/*
 * Copyright 2016 Google, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package com.gomeplus.grpc.protobuf;


option java_multiple_files = false;


//--------------------- 查询用户 Demo --------------------------------


message RequestUser {
    string appId = 1;
    int64 userId = 2;
    string token =3;
    int64 traceId=4;//记录ID
	string extra=5;//用于扩展信息
}

message ResponseUser {
	bool success=1;
    string token = 2;

	bool isVaild=3;//用户token时候有效
    int64 traceId=4;//记录ID
	string extra=5;//用于扩展信息
}

service UserService {
    //获取用户token 参数：appId,userId,返回 token
    rpc getToken(RequestUser) returns (ResponseUser);
    //检查用户token 是否有效，参数apppId,userId,token,返回：isVaild
    rpc checkUserToken(RequestUser) returns (ResponseUser);


}

